[package]
name = "rlgl"
version = "0.1.0"
authors = ["wafelack <wafelack@protonmail.com>"]
edition = "2018"
description = "Play red light, green light with files."
homepage = "https://github.com/wafelack/rlgl"
license = "GPL-3.0+"
keywords = ["events", "files"]
categories = ["command-line-utilities", "filesystem", ""]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.13.0"
clap = "2.33.3"
